--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
+  deploy:
+    name: Deployment
     runs-on: ubuntu-20.04
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build -f Dockerfile ./src --network host  -t sunny-tis-config:v1
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER_NAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          target: deploy
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: crazylin007/sunny-tis-config:deploy
+          cache-from: type=registry,ref=crazylin007/sunny-tis-config:deploy
+          cache-to: type=inline
