--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,10 @@
 name: Build sunny-tis-config
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: workflow_dispatch
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
   deploy:
@@ -33,4 +33,3 @@ jobs:
           tags: crazylin007/sunny-tis-config:deploy
           cache-from: type=registry,ref=crazylin007/sunny-tis-config:deploy
           cache-to: type=inline
-          
