--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,14 @@
 name: Build sunny-tis-config
 
-on: workflow_dispatch
-
-defaults:
-  run:
-    shell: bash
-
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch: 
+  
 jobs:
-  deploy:
+  build:
     name: Deployment
     runs-on: ubuntu-20.04
     steps:
@@ -27,7 +28,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          target: deploy
           platforms: linux/amd64,linux/arm64
           push: true
           tags: crazylin007/sunny-tis-config:deploy
