--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch: 
-  
+
 jobs:
   build:
     name: Deployment
@@ -31,5 +31,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: crazylin007/sunny-tis-config:deploy
-          cache-from: type=registry,ref=crazylin007/sunny-tis-config:deploy
-          cache-to: type=inline
+          # cache-from: type=registry,ref=crazylin007/sunny-tis-config:deploy
+          # cache-to: type=inline
